--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="https://www.w3schools.com/howto/howto_js_sidenav.asp">Go to w3schools</a>
     </li>
     <li>
-      <h2><a href="html/#.html">Overlay</a></h2>
+      <h2><a href="html/overlay.html">Overlay</a></h2>
       <a href="https://www.w3schools.com/howto/howto_css_overlay.asp">Go to w3schools</a>
     </li>
     <li>
