--- a/html/overlay.html
+++ b/html/overlay.html
@@ -6,13 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Overlay</title>
-  <link rel="stylesheet" href="css/myreset.css">
-  <link rel="stylesheet" href="css/overlay.css">
-  <script type="text/javascript" src="js/overlay.js" acync></script>
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/overlay.css">
+  <script type="text/javascript" src="../js/overlay.js" acync></script>
 </head>
 
 <body>
-
+  <div id="overlay" onclick="off()">
+    <div class="text">ovelayyyyyyy!</div>
+  </div>
+  <button onclick="on()">Click me to turn on overlay effect!</button>
 </body>
 
 </html>
