--- a/html/slideNavigation.html
+++ b/html/slideNavigation.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Slide Navigation</title>
-  <link rel="stylesheet" href="../css/myreset.css">
+  <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/slideNavigation.css">
   <script type="text/javascript" src="../js/slideNavigation.js" async></script>
 </head>
