--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>test</title>
-  <link rel="stylesheet" href="css/myreset.css">
+  <link rel="stylesheet" href="css/reset.css">
   <style>
-  ul, li{margin: .5rem;}
+    ul,
+    li {
+      margin: .5rem;
+    }
   </style>
 </head>
 
@@ -24,7 +27,7 @@
       <a href="https://www.w3schools.com/howto/howto_css_overlay.asp">Go to w3schools</a>
     </li>
     <li>
-      <h2><a href="html/#.html">Sticky Image</a></h2>
+      <h2><a href="html/stickyImg.html">Sticky Image</a></h2>
       <a href="https://www.w3schools.com/howto/howto_css_image_sticky.asp">Go to w3schools</a>
     </li>
     <li>
